--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feur-bot-js",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "The ultimate form of humor",
   "main": "app.js",
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "author": "SkrienaSenka",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "discord.js": "^14.7.1"
   }
