--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "feur-bot-js",
   "version": "2.0.0",
   "description": "La forme ultime de l'humour",
-  "main": "server.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/app.js"
   },
   "author": "SkrienaSenka",
   "license": "ISC",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
     "express": "^4.18.2"
   }
