Modify default env values

--- a/.env.dist
+++ b/.env.dist
@@ -1,10 +1,10 @@
 # .env
 
-NODE_ENV=
+NODE_ENV=prod
 
 AUTHOR_ID=171958342816759808
 
-DEFAULT_PORT=9000
+DEFAULT_PORT=10000
 
 # Connecting to the bot
 APPLICATION_TOKEN=
